# physics-simulator

./: .gitignore  CMakeLists.txt  Makefile  componentBuilder.cpp  components.cpp  main.cpp  physicsWorld.cpp  physicsWorld.hpp
cppsrc/: CMakeLists.txt  componentBuilder.cpp  components.cpp  constructors.cpp  main.cpp  physicsWorld.cpp
headers/: componentBuilder.hpp  components.hpp  constructors.hpp
